--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,19 @@
-.App {
-  text-align: center;
+body{
+background-color: var(--background-color);
+color:var(--text-color);
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav-link {
+  color: var(--text-color);
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+a{
+  
+  color: var(--text-color);
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.navbar{
+  background-color: var(--nav-color)!important;
+color:var(--text-color);
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+textarea.form-control {
+  /* min-height: calc(1.5em + 0.75rem + calc(var(--bs-border-width) * 2)); */
+  box-shadow:  var(--box-shadow);
 }
